<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HowDoYouSay</string>
    <string name="app_title">How Do You Say</string>
    <string name="translate_label">Translate:</string>
    <string name="trans_hint">Enter text here</string>
    <string name="from_lang_label">from:</string>
    <string name="to_lang_label">into:</string>
    <string name="go_button">Translate</string>
    <string name="speak_button">Speak</string>
    <string name="past_queries_button">Past Queries</string>
    <string name="source_label">Source:</string>
    <string name="translated_label">Translated:</string>
    <string name="is_valid_label">Is Valid?</string>
    <string name="translations_title">Translations</string>
    <string name="translation_title">Translation</string>
    <string name="close_x">x</string>
    <string name="new_trans">New Translation</string>
    <string name="action_settings">Settings</string>

</resources>
