<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs683proj.howdoyousay.HDYSActivity" xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/linearlayoutA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/fromlangspinner"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="17dp" />

        <Spinner
            android:id="@+id/tolangspinner"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginBottom="17dp" />

    </LinearLayout>        
        
    <EditText
        android:id="@+id/sourcequery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearlayoutA"
        android:layout_alignRight="@+id/linearlayoutA"
        android:layout_below="@id/linearlayoutA"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/trans_hint" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearlayoutB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="27dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearlayoutC"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/gobutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_button" />

            <Button
                android:id="@+id/speakbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speak_button" />
        </LinearLayout>

        <Button
            android:id="@+id/pastqueriesbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/past_queries_button" />
    </LinearLayout>

    <TextView
        android:id="@+id/translatedresult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearlayoutB"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp" />

</RelativeLayout>